--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,18 @@
-{
-    "compilerOptions": {
-    //   "target": "es5",
-    //   "lib": [
-    //     "dom",
-    //     "dom.iterable",
-    //     "esnext"
-    //   ],
-    //   "allowJs": true,
-    //   "skipLibCheck": true,
-    //   "esModuleInterop": true,
-    //   "allowSyntheticDefaultImports": true,
-    //   "strict": true,
-    //   "forceConsistentCasingInFileNames": true,
-    //   "noFallthroughCasesInSwitch": true,
-    //   "module": "esnext",
-    //   "moduleResolution": "node",
-    //   "resolveJsonModule": true,
-    //   "isolatedModules": true,
-    //   "noEmit": true,
-      "jsx": "react-jsx"
-    },
-    // "include": [
-    //   "src"
-    // ]
-  }
-  
+// {
+//   "compilerOptions": {
+//     "strict": true,
+//     "declaration": true,
+//     "declarationMap": true,
+//     "module": "ESNext",
+//     "target": "ESNext",
+//     "noImplicitAny": true,
+//     "noImplicitThis": true,
+//     "moduleResolution": "node",
+//     "allowSyntheticDefaultImports": true,
+//     "experimentalDecorators": true,
+//     "emitDecoratorMetadata": true,
+//     "declarationDir": "./typings"
+//   },
+//   "include": ["./src/**/*"],
+//   "exclude": ["node_modules", "dist", "**/*.spec.ts"]
+// }
