--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -35,5 +35,6 @@
   },
   "bugs": {
     "url": "https://github.com/cutefcc/fcc-libs/issues"
-  }
+  },
+  "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b"
 }
