--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -21,5 +21,6 @@
   "dependencies": {
     "@fcc/core": "^1.1.0",
     "@fcc/hooks": "^1.3.0"
-  }
+  },
+  "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b"
 }
