--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fcc/hooks",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "> TODO: description",
   "author": "cutefcc <cutefcc@126.com>",
   "homepage": "https://github.com/cutefcc/fcc-libs#readme",
@@ -20,7 +20,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib", "dist"
+    "lib",
+    "dist"
   ],
   "repository": {
     "type": "git",
