--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -5,21 +5,14 @@
   "author": "cutefcc <cutefcc@126.com>",
   "homepage": "https://github.com/cutefcc/fcc-libs#readme",
   "license": "ISC",
-  "main": "./dist/index.module.js",
+  "main": "./lib/index.ts",
   "source": "lib/index.ts",
-  "exports": {
-    "default": "./dist/index.module.js"
-  },
-  "module": "./dist/index.module.js",
-  "type": "module",
-  "types": "./dist/typings/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib",
-    "dist"
+    "lib"
   ],
   "repository": {
     "type": "git",
@@ -35,9 +28,5 @@
   "bugs": {
     "url": "https://github.com/cutefcc/fcc-libs/issues"
   },
-  "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b",
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+  "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b"
 }
