--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,18 +1,21 @@
 {
   "name": "@fcc/hooks",
-  "version": "1.9.0",
+  "version": "1.8.0",
   "description": "> TODO: description",
   "author": "cutefcc <cutefcc@126.com>",
   "homepage": "https://github.com/cutefcc/fcc-libs#readme",
   "license": "ISC",
-  "main": "./lib/index.ts",
+  "main": "./dist/index.cjs",
   "source": "lib/index.ts",
+  "type": "module",
+  "types": "./dist/typings/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "repository": {
     "type": "git",
@@ -28,5 +31,9 @@
   "bugs": {
     "url": "https://github.com/cutefcc/fcc-libs/issues"
   },
-  "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b"
+  "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b",
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
