--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,14 +1,20 @@
 {
   "name": "@fcc/hooks",
-  "version": "1.10.0",
+  "version": "1.7.0",
   "description": "> TODO: description",
   "author": "cutefcc <cutefcc@126.com>",
   "homepage": "https://github.com/cutefcc/fcc-libs#readme",
   "license": "ISC",
   "main": "./dist/index.cjs",
   "source": "lib/index.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.modern.js"
+  },
+  "module": "./dist/index.module.js",
   "type": "module",
   "types": "./dist/typings/index.d.ts",
+  "unpkg": "./dist/index.umd.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
