--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -39,6 +39,7 @@
   "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b",
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "immer": "^9.0.12"
   }
 }
