--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fcc/hooks",
-  "version": "1.11.1",
+  "version": "1.11.2",
   "description": "> TODO: description",
   "author": "cutefcc <cutefcc@126.com>",
   "homepage": "https://github.com/cutefcc/fcc-libs#readme",
@@ -38,8 +38,8 @@
   },
   "gitHead": "fc5cdb8e0a8dd2b7d9d26ebce1c46358f190aa2b",
   "peerDependencies": {
+    "immer": "^9.0.12",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "immer": "^9.0.12"
+    "react-dom": "^17.0.2"
   }
 }
